[package]
name = "teras-integrasi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "TERAS integration layer - audited operations and unified context"

[dependencies]
teras-core = { workspace = true }
teras-lindung = { workspace = true }
teras-kunci = { workspace = true }
teras-jejak = { workspace = true }
teras-suap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "=3.10.1"
tokio-test = "=0.4.3"
