[package]
name = "teras-sandi"
description = "TERAS Digital Signatures Product - Hybrid post-quantum document signing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
teras-core = { workspace = true }
teras-kunci = { workspace = true }
teras-jejak = { workspace = true }
teras-lindung = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
