[package]
name = "teras-suap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
teras-core = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
ipnetwork = { workspace = true }
